--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,10 @@ ul,li{
     margin: 0;
     list-style: none;
 }
+html,body{
+    width: 100%;
+    height: 100%;
+}
 a:link,
 a:visited,
 a:hover,
@@ -18,14 +22,35 @@ a:active{
     left: 0;
     color: #fff;
     z-index: 999;
+    transition:  all 1s;
+}
+.lt_aside.now{
+    left:-180px;
+}
+.lt_left.now,.lt_left.now .topbar{
+
+    padding-left: 0;
 }
 .lt_aside a{
     color: #fff;
     display: block;
 }
+.mt_20{
+    margin-top: 20px;
+}
+.lt_left,.lt_left .topbar{
+    transition:  all 1s;
+}
+
+.lt_brand{
+    overflow: hidden;
+    height: 50px;
+    background-color: #367FA9;
+}
 .lt_brand h1{
     font-size: 24px;
     text-align: center;
+    margin:10px auto;
 }
 .lt_user img{
     display: block;
@@ -64,6 +89,7 @@ a:active{
 /* dingnbu */
 .lt_left{
     padding-left: 180px;
+    padding-top: 50px;
     /* background-color: red; */
     /* height: 1000px; */
 }
@@ -75,6 +101,7 @@ position: fixed;
 top: 0;
 left: 0;
 padding-left: 180px;
+z-index: 88;
 }
 .topbar a{
     display: block;
@@ -84,4 +111,12 @@ padding-left: 180px;
     line-height: 50px;
     font-size: 20px;
     color: white;
+}
+#main_box{
+    width: 50%;
+    height: 400px;
+}
+#main_box2{
+    width: 50%;
+    height: 400px;
 }
